# art

./: .gitignore  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
art/: app.py
art/template/: template.osu
art/tempo/: __init__.py  nn_tempo.py  tempo.py
art/timings/: __init__.py  timings.py
art/translation/: __init__.py  translation.json  translation.py
art/utils/: __init__.py  utils.py
art/web/: __init__.py  dashboard.py  sidebar.py  translation.json  utils.py
tests/: test_translation.py
