[project]
name = "art"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "essentia==2.1b6.dev1110",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "mutagen>=1.47.0",
    "plotly>=6.0.1",
    "pyperclip>=1.9.0",
    "streamlit>=1.43.2",
]
